--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-
+<h1>Registration Form</h1>
 <form id="myForm" onsubmit="myFunction(event)" >
   First name: <input type="text" name="fname" value="Donald"><br>
   Last name: <input type="text" name="lname" value="Duck"><br>
