--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,7 @@
   Last name: <input type="text" name="lname" value="Duck"><br>
   <input type="submit" value="Submit">
 </form> 
+  <h2> End Form </h2>
 
 
 
